--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cop5818-homework2",
   "version": "1.0.0",
-  "description": "RESTful API with Node.js, Express, and MongoDB",
+  "description": "RESTful API with Node.js, Express, and SQLite",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -13,12 +13,13 @@
     "testEnvironment": "node",
     "coveragePathIgnorePatterns": ["/node_modules/"]
   },
-  "keywords": ["nodejs", "express", "mongodb", "rest-api"],
+  "keywords": ["nodejs", "express", "sqlite", "rest-api"],
   "author": "Jeremy - [Your UCFID]",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.0.0",
+    "sequelize": "^6.35.0",
+    "sqlite3": "^5.1.6",
     "dotenv": "^16.0.3"
   },
   "devDependencies": {
