--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "jest --coverage",
-    "seed": "node scripts/seedDatabase.js"
+    "test:watch": "jest --watch",
+    "seed": "node scripts/seedDatabase.js",
+    "lint": "echo 'No linter configured yet'"
   },
   "jest": {
     "testEnvironment": "node",
     "coveragePathIgnorePatterns": ["/node_modules/"]
   },
-  "keywords": ["nodejs", "express", "sqlite", "rest-api"],
+  "keywords": ["nodejs", "express", "sqlite", "rest-api", "sequelize", "api", "demographics", "jest"],
   "author": "Jeremy - [Your UCFID]",
   "license": "ISC",
   "dependencies": {
